# Chess

./: .gitignore  CMakeLists.txt  README.md  board.cpp  board.h  commands.h  main.cpp
client/: NetworkClient.hpp
cpp/src/: img.cpp  img.hpp
server/: Game.cpp  Game.hpp  GameLoop.cpp  GameLoop.hpp  GameManager.cpp  GameManager.hpp  GameManager.tpp  NetworkServer.cpp  PlayerSession.hpp  WebSocketServer.cpp  WebSocketServer.hpp  main.cpp
src/: Constants.hpp  PathBuilder.cpp  PathBuilder.hpp
src/arbiter/: CollisionResolver.cpp  CollisionResolver.hpp  Motion.hpp  MotionAdvancer.cpp  MotionAdvancer.hpp  MotionUpdater.cpp  MotionUpdater.hpp  RealTimeArbiter.cpp  RealTimeArbiter.hpp
src/audio/: SoundEffects.cpp  SoundEffects.hpp
src/audios/: AudioManager.cpp  AudioManager.hpp
src/buffer/: SoundEffects.cpp  SoundEffects.hpp
src/commands/: CommandExecutor.cpp  CommandExecutor.hpp  CommandType.hpp
src/config/: AnimConfig.hpp  PieceConfigManager.cpp  PieceConfigManager.hpp  SpriteLoader.cpp  SpriteLoader.hpp
src/controllerClick/: BoardMapper.cpp  BoardMapper.hpp  controllerClick.cpp  controllerClick.hpp
src/game_engine/: GameEngine.cpp  GameEngine.hpp  GameSnapshot.hpp  PieceStatus.hpp  SnapshotBuilder.cpp  SnapshotBuilder.hpp
src/img/: README.md
src/img/src/: img.hpp
src/model/: Board.cpp  Board.hpp  Piece.cpp  Piece.hpp
src/movement/: BishopRule.cpp  MoveRule.hpp  PathBuilder.cpp  PathBuilder.hpp  RookRule.cpp
src/network/: GameSnapshot.hpp  NetworkClient.cpp  NetworkClient.hpp  Protocol.hpp  Serializer.cpp  Serializer.hpp
src/renderer/: AnimConfig.hpp  AnimatorPool.cpp  AnimatorPool.hpp  GameSnapshot.hpp  ImgRenderer.cpp  ImgRenderer.hpp  Renderer.hpp  SpriteAnimator.cpp  SpriteAnimator.hpp  SpriteLoader.cpp  SpriteLoader.hpp
src/rule_engine/: RuleEngine.cpp  RuleEngine.hpp  RuleResult.hpp
src/server/: GameLoop.cpp  GameLoop.hpp  NetworkServer.cpp  NetworkServer.hpp  PlayerSession.hpp  WebSocketServer.cpp  WebSocketServer.hpp  main.cpp
src/text_io/: BoardParser.cpp  PieceFactory.cpp  PieceFactory.hpp
tests/text_test_runner/: TextTestRunner.cpp
דפים/: Bishop.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h  board.cpp  board.h  commands.cpp  main.cpp  piece.h
דפים/pieces/: Bishop.h  King.h  Knight.h  Pawn.h  Queen.h  Rook.h
טסטים/: tests.cpp  tests1.cpp  tests2.cpp  tests3.cpp  tests5.cpp  tests6.cpp  tests8.cpp
